--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "9.4.5",
     "react-grid-layout": "^1.0.0",
+    "react-icons": "^3.11.0",
     "react-quill": "^1.3.5",
     "react-redux": "7.2.1",
+    "react-responsive-modal": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "react-text-mask-hoc": "^0.11.0",
