--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "git@github.com:coreui/coreui-pro-react-admin-template.git"
   },
   "dependencies": {
+    "@annotationhub/react-golden-layout": "^2.3.2",
     "@coreui/chartjs": "^2.0.0",
     "@coreui/coreui-pro": "^3.2.2",
     "@coreui/icons": "2.0.0-beta.5",
@@ -46,7 +47,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-google-maps": "9.4.5",
-    "react-grid-layout": "^1.0.0",
+    "react-grid-layout": "^1.2.0",
     "react-icons": "^3.11.0",
     "react-quill": "^1.3.5",
     "react-redux": "7.2.1",
